--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
       content="Web site created using create-react-app"
     />
 <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@600&display=swap" rel="stylesheet">
-
-   
     <title>Pan Mabur App</title>
+     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
